[243] Add video and improve guidance

--- a/guidelines/2.4.3.md
+++ b/guidelines/2.4.3.md
@@ -14,58 +14,64 @@ On this page:
 
 - [Requirements](#requirements)
 - [Guidance for Design](#guidance-for-design)
-- [Guidance for Web](#guidance-for-web)
+- [Guidance for code](#guidance-for-code)
 - [More info](#more-info)
 
 ---
 
 ## Requirements
 
-- When navigated sequentially using a keyboard, interactive elements should receive [focus](./definitions.md#keyboard-focus) following a predictable, natural reading order (from left to right and top to bottom, in most cases).
+- When navigated sequentially using the 'Tab' key, interactive elements should receive [focus](./definitions.md#keyboard-focus) in a predictable, natural reading order (from left to right and top to bottom, in most cases).
 
-  - The easiest way to avoid focus order issues is to make sure that elements are displayed on screen in the same order as they appear in the Document Object Model (Web).
+  - The easiest way to avoid focus order issues is to make sure that elements are laid on screen in the same order as they appear in the Document Object Model (HTML document).
 
 - Manage [keyboard focus](./definitions.md#keyboard-focus) manually when needed to make the interface easy to use for screen reader, Switch control and keyboard-only users.
   - For example, if pressing a button triggers a modal dialog, keyboard focus should move to that dialog and stay within (rather than going back to elements behind the dialog), until the user closes the dialog.
 
 ### Why?
 
-This ensures that content can be navigated in a logical way by screen reader users, keyboard users and Switch device users.
+Keyboard users and screen reader users use the 'Tab' key to navigate between the focusable (interactive) elements on a page.
+If that navigation doesn't happen in a logical way, it's difficult to understand:
 
-#### The order in which elements appear in code matters
+- which element on the page currently has the keyboard focus;
+- where they are on the page;
+- how to reach a specific element on the page.
 
-- Screen readers go through elements on a page in the order in which they appear in the Document Object Model (Web), which is a tree-like structure that contains all the elements on the page.
+### How does this work?
 
-- The order in which elements appear in that Document Object Model / View Hierarchy might be different from the order in which they're laid out visually on screen.
+The order in which elements are laid out on screen should match the order in which they're defined in the Document Object Model (HTML document).
 
-  - This can happen for example if certain CSS techniques are used to change the relative positioning of elements on the page.
+But some (discouraged) CSS and HTML techniques can create a mismatch here. We shouldn't use those techniques.
 
-- The order in which elements appear in that Document Object Model / View Hierarchy matters to user experience.
+See Rob Dodson explain 'Focus order' in this short video:
 
-  - When people use a screen reader, the keyboard or a Switch control, they interact with elements on the page in the order in which they appear in that Document Object Model / View Hierarchy.
-
-- So make sure that elements appear in the Document Object Model / View Hierarchy in a reading order that's natural and makes sense.
+<div class="video_container">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/EFv9ubbZLKw?start=198" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 ---
 
 ## Guidance for Design
 
-- When you provide different designs for different screen sizes (e.g. desktop and mobile, or for different break points), make sure that all interactive elements appear in the same order across on the different designs.
+- When you provide different mockups for different screen sizes (such as desktop, mobile, and for different break points), make sure that all interactive elements appear in the same order across on the different mockups.
 
-  - If you can't do that, call it out to developers as they're likely to need to create different structures for the different designs.
+  - If you really can't do that, call it out to developers and ask them to reorder the elements across different breakpoints in the HTML code itself, rather than using CSS.
 
 - On the designs that you give to developers, and in conversations with them, indicate what the ['keyboard focus order'](./definitions.md#tab-order) should be for interactive elements.
 
 - Also indicate when actioning a button should move the [keyboard focus](./definitions.md#keyboard-focus) somewhere else.
-  This will help make sure that components such as dialogs can be closed easily by users.
+  - In particular:
+    - When activating a button makes a modal dialog appear, which interactive element within the modal should receive focus? (Usually it should be the first one).
+    - When closing a modal dialog, which interactive element should the keyboard focus move to? (Usually it should be the button that triggered the modal).
+    - When activating a button that disappears right after being activated, where should the keyboard focus move to?
 
-### Example: designing a modal dialog for the Web
+<!-- ### Example: designing a modal dialog for the Web
 
 - Opening a modal dialog should move the [keyboard focus](./definitions.md#keyboard-focus) to an element inside the modal dialog, rather than keeping the keyboard focus outside it. It's best to move the keyboard focus to the 'Close' button inside the modal dialog, or to the main header within the dialog.
 - The keyboard focus should stay within the modal dialog when users press the 'Tab' key several time, rather than go back to content behind the modal dialog.
-- There should be a button to close or dismiss the modal dialog. Pressing that button should return the keyboard focus to the button that triggered modal dialog in the first place (so that the user go back to where they were on the page before opening the modal dialog).
+- There should be a button to close or dismiss the modal dialog. Pressing that button should return the keyboard focus to the button that triggered modal dialog in the first place (so that the user go back to where they were on the page before opening the modal dialog). -->
 
-### Common mistakes
+### A common design mistake
 
 - The order of interactive elements is not consistent across designs for different screen sizes.
   - For example, imagine that you've designed a modal dialog with two buttons: 'Cancel' and 'OK':
@@ -79,7 +85,7 @@ This ensures that content can be navigated in a logical way by screen reader use
 
 ---
 
-## Guidance for Web
+## Guidance for code
 
 ### Be careful how you order elements in the DOM is it impacts user experience
 
