[247] Improve summary and guidance with two videos

--- a/guidelines/2.4.7.md
+++ b/guidelines/2.4.7.md
@@ -1,10 +1,13 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="../styles.css" />
+
 This document is in beta. Help us by [reporting issues via Github](https://github.com/jfhector/accessibility-guidelines) or [email](mailto:jeanfrancois.hector@googlemail.com).
 
 [Back to the overview page](./../index.html)
 
 # Focus visible
 
-## When they use the Tab key to navigate through the page, make sure keyboard users can see which interactive element has the keyboard focus.
+## When people press the Tab key to navigate through the interactive elements on the page, make sure they can see which element has the keyboard focus.
 
 It should be easy to tell which element has [keyboard focus](./definitions.md#keyboard-focus).
 
@@ -13,58 +16,67 @@ It should be easy to tell which element has [keyboard focus](./definitions.md#ke
 On this page:
 
 - [Requirements](#requirements)
+- [Common mistakes](#common-mistakes)
 - [Guidance for Design](#guidance-for-design)
-- [Guidance for Web](#guidance-for-web)
+- [Guidance for code](#guidance-for-code)
 - [More info](#more-info)
 
 ---
 
 ## Requirements
 
-- When actionable items receive the [keyboard focus](./definitions.md#keyboard-focus), their visual appearance changes (e.g. a box appears around them, links become underlined, the colour of the text or of the background changes).
-
-### Related requirements
-
-- See the ['Non-text contrast'](./1.4.11.md) for requirements about the contrast of the [keyboard focus](./definitions.md#keyboard-focus) indicators.
-
-### Common mistakes
-
-- The keyboard focus indicator has been suppressed.
+- When interactive elements receive the [keyboard focus](./definitions.md#keyboard-focus), their visual appearance must change. For example:
+  - an outline could appear around focused elements;
+  - links could become underlined;
+  - the text or background colour of the element could change.
 
 ### Why?
 
 - Sighted keyboard and switch device users track where they are on a page as they navigate through focusable elements, similar to using a remote control with a TV interface.
 
-### Official wording in the Web Content Accessibility Guidelines
+### How does this work?
 
-> [**2.4.7 Focus Visible:**](https://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-focus-visible.html) Any keyboard operable user interface has a mode of operation where the keyboard focus indicator is visible. (Level AA)
+See Rob Dodson explain 'Focus rings' in this short video:
 
-See the [W3C's detailed explanation of this guideline](https://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-focus-visible.html) with techniques and examples.
+<div class="video_container">
+  <iframe width="560" height="315" src="https://youtu.be/ilj2P5-5CjI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+### Related requirement
+
+- See the ['Non-text contrast'](./1.4.11.md) requirements about the contrast of the [keyboard focus](./definitions.md#keyboard-focus) indicator.
+
+---
+
+## Common mistakes
+
+### The keyboard focus indicator has been suppressed.
+
+Some sites suppress the browser's default focus indicator (using `outline: 0` or `none`), without replacing it with a better focus indicator.
+
+#### Failure example: Jet2Holidays
+
+<div class="video_container">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/hdiLIy0YUpY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 ---
 
 ## Guidance for Design
 
 - Do not remove the browser's default focus indicator unless you're also providing an alternative [keyboard focus](./definitions.md#keyboard-focus) indicator.
-
-### Doing better
-
-#### Include keyboard focus state for all interactive components in your designs
-
-- Do not depend on a browser's default visible states for [keyboard focus](./definitions.md#keyboard-focus).
-  - Their colour may clash with your design or blend into the background colour.
-  - Some browser's default focus indicators have very poor contrast.
+- It's also better include enhanced focus indicators in your designs, rather than relying on the browser's default focus indicators.
+  - This is most browsers' default focus indicators have poor contrast (except for Edge and Chrome).
 
 ### More guidance for Design
 
-- [Focus Styles Frequently Asked Questions](https://docs.google.com/document/d/1I9AvA3cPDlNdNpBZ1Kotk0CRLjL4aNe5Fkjs6S61nBI/edit?usp=sharing) by Jean-Francois Hector
 - [GDS Design System](https://design-system.service.gov.uk/components/) for example of good focus indicators
 - [Rob Dodson’s A11ycast episode on focus rings](https://www.youtube.com/watch?v=ilj2P5-5CjI&list=PLNYkxOF6rcICWx0C9LVWWVqvHlYJyqw7g&index=15)
 - [Tips for Designing Useful and Usable Focus Indicators](https://www.deque.com/blog/give-site-focus-tips-designing-usable-focus-indicators/) by Deque
 
 ---
 
-## Guidance for Web
+## Guidance for code
 
 ### Do not disable focus styles, unless you've already implemented improved focus styles
 
@@ -73,23 +85,45 @@ By default, native HTML elements have a visual focus indicator provided by the b
 #### Failure example
 
 ```html
-// Never do this, // unless you’ve already replaced the default focus outline
-with better custom focus styles!
+// Never do this, unless you’ve already replaced the default focus outline with
+better custom focus styles!
+
+<head>
+  <style>
+    a /* or a:focus */ {
+      outline: none; /* or outline: 0;*/
+    }
+  </style>
+</head>
+
+<body>
+  <!--  -->
+
+  <a href="...">Next</a>
+</body>
+```
+
+#### Good example
+
+```html
+// Doing `outline: none` or `0` is fine is you're replacing the browser default
+focus outline with better styles.
 
 <style>
-  a {
-    outline: none; /* or outline: 0;*/
+  a:focus {
+    box-shadow: 0 0 0 0.2rem ff40b8;
+    outline: none;
   }
 </style>
 
 <!--  -->
 
-<a href="..."> Next </a>
+<a href="...">Next</a>
 ```
 
-### To prevent keyboard focus styles from appearing when users click interactive elements, use the [`:focus-visible` polyfill](https://wicg.github.io/focus-visible/explainer.html)
+### To prevent your enhanced keyboard focus styles from appearing when users click on interactive elements, use the [`:focus-visible` polyfill](https://wicg.github.io/focus-visible/explainer.html)
 
-#### What's the use case?
+<!-- #### What's the use case? -->
 
 Browsers' default focus styles don't appear when people click or tap buttons or links.
 However, if you define your own enhanced styles using the CSS `:focus` pseu-do class, those styles will appear on click/tap as well.
@@ -99,6 +133,7 @@ They might say to a developer: “Get rid of that focus ring”.
 
 But if you got rid of focus rings entirely, the interface would become unusable for keyboard users.
 
+<!--
 #### How the `:focus-visible` CSS selector solves that problem
 
 Using the `:focus-visible` CSS selector allows you to …
@@ -109,12 +144,12 @@ Using the `:focus-visible` CSS selector allows you to …
 In itself, `:focus-visible` doesn’t have any accessibility benefit. Just keeping the focus visible for all users is fine from an accessibility perspective.
 But it’s a good way to handle clients or designers’ requests for the focus ring to be removed for mouse or touch users, which would disable keyboard users.
 
-#### You need a polyfill to use `:focus-visible`
+#### You need a polyfill to use `:focus-visible` -->
 
 As of Feb 2020 `:focus-visible` is only supported by default in Firefox.
 But the [`:focus-visible` polyfill](https://wicg.github.io/focus-visible/explainer.html) is small and robust.
 
-### More guidance for Web
+### More guidance for code
 
 - [`:focus-visible` and backwards compatibility](https://developer.paciellogroup.com/blog/2018/03/focus-visible-and-backwards-compatibility/) by The Paciello Group
 - [Rob Dodson’s A11ycast episode on focus rings](https://www.youtube.com/watch?v=ilj2P5-5CjI&list=PLNYkxOF6rcICWx0C9LVWWVqvHlYJyqw7g&index=15)
@@ -122,6 +157,12 @@ But the [`:focus-visible` polyfill](https://wicg.github.io/focus-visible/explain
 ---
 
 ## More info
+
+### Official wording in the Web Content Accessibility Guidelines
+
+> [**2.4.7 Focus Visible:**](https://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-focus-visible.html) Any keyboard operable user interface has a mode of operation where the keyboard focus indicator is visible. (Level AA)
+
+See the [W3C's detailed explanation of this guideline](https://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-focus-visible.html) with techniques and examples.
 
 ### Sources
 
