[247] Fix a11ycast youtube iframe

--- a/guidelines/2.4.7.md
+++ b/guidelines/2.4.7.md
@@ -39,7 +39,7 @@ On this page:
 See Rob Dodson explain 'Focus rings' in this short video:
 
 <div class="video_container">
-  <iframe width="560" height="315" src="https://youtu.be/ilj2P5-5CjI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ilj2P5-5CjI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 ### Related requirement
